Force SSL (through htaccess) and corrected vh-bug on ios-devices

--- a/src/app/styles/layout-base.scss
+++ b/src/app/styles/layout-base.scss
@@ -29,8 +29,13 @@ body {
 // Left slider
 .wrapper-inner {
   overflow:hidden;
-  height:100vh;
-  position:relative;
+  //height:100vh;
+
+  position:absolute;
+  top:0px;
+  left:0px;
+  bottom:0px;
+  right:0px;
 
 
 
@@ -970,39 +975,3 @@ body {
     }
   }
 }
-
-
-// *******************************************   ios workaround for vh-bugs
-.no-vh-support {
-  .wrapper-inner { // fixes the 100vh
-    /**
-     * iPad with portrait orientation.
-     */
-    @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait){
-      height: 930px !important; // was 1024px;
-    }
-
-    /**
-     * iPad with landscape orientation.
-     */
-    @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape){
-      height: 674px !important; // was 768px;
-    }
-
-    /**
-     * iPhone 5
-     * You can also target devices with aspect ratio.
-     */
-    @media screen and (device-aspect-ratio: 40/71) and (orientation:portrait) {
-      height: 460px !important; // was 500px;
-
-    }
-    @media screen and (device-aspect-ratio: 40/71) and (orientation:landscape) {
-      height: 232px !important; // was 500px;
-
-    }
-
-  }
-}
-
-// *******************************************   end ios workarounds
